Some refactoring on periods

--- a/templates/double_var_rolling.html
+++ b/templates/double_var_rolling.html
@@ -1,10 +1,10 @@
 class {{ className }}(Expression):
     def __init__(self, lhs, rhs, periods, *args, **kwargs):
         super({{ className }}, self).__init__(short_name='{{ shortName }}', long_name='{{ longName }}', desc='{{ desc }}',
+                periods=periods,
                 *args, **kwargs)
         self.lhs = lhs
         self.rhs = rhs
-        self.periods = periods
 
     def evaluate(self, table):
         periods = self.periods
